made all errors compare to results