@@ -44,27 +44,25 @@ class SudokuTest {
 
         Sudoku su = new Sudoku(falseBoard);
         List<String> results = su.getErrors();
-        List<String> rowErrors = List.of(
-                "30 is not a valid number",
-                "There is a duplicate number 7 in row 2",
-                "There is a duplicate number 3 in row 6",
-                "There is a duplicate number 2 in row 7"
-        );
-        assertEquals(rowErrors, su.checkRow());
 
-        List<String> colErrors = List.of("There is a duplicate number 3 in column 0",
-                "30 is not a valid number", "There is a duplicate number 7 in column 5",
-                "There is a duplicate number 2 in column 6");
-
-        assertEquals(colErrors, su.checkCol());
-        List<String> boxErrors = List.of("30 is not a valid number",
-                "There is a duplicate number 7 at row 2 column 5",
+        List<String> expectedErrors = new ArrayList<>(Arrays.asList(
+                "30 is not a valid number", "30 is not a valid number", "30 is not a valid number",
+                "There is a duplicate number 2 at row 7 column 6",
+                "There is a duplicate number 2 in column 6",
+                "There is a duplicate number 2 in row 7",
                 "There is a duplicate number 3 at row 6 column 1",
-                "There is a duplicate number 2 at row 7 column 6");
+                "There is a duplicate number 3 in column 0",
+               "There is a duplicate number 3 in row 6",
+               "There is a duplicate number 7 at row 2 column 5",
+                "There is a duplicate number 7 in column 5",
+                "There is a duplicate number 7 in row 2"
+        ));
 
 
-        assertEquals(boxErrors, su.checkBox());
+        Collections.sort(results);
+        Collections.sort(expectedErrors);
 
+        assertEquals(expectedErrors, results);
 
     }
 
